# cloud-native-ai-todo

./: .gitignore  BONUS_POINTS_EVIDENCE.md  CLAUDE.md  GITHUB_SETUP_GUIDE.md  README.md  SUBMISSION_CHECKLIST.md  myproject_requirement.md
.claude/: SKILLS_README.md
.claude/commands/: sp.dapr-gen.md  sp.event-arch.md  sp.k8s-blueprint.md  sp.mcp-gen.md  sp.observability.md  sp.test-suite.md
.claude/skills/: quality-gates.md  spec-to-code.md  tdd-workflow.md
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: test-phase3-chatbot.yml
.specify/memory/: constitution.md
history/adr/: 001-rule-based-agent-fallback.md  002-custom-chat-ui.md
phase-1-console-app/: .gitignore  README.md  plan.md  pyproject.toml  tasks.md
phase-1-console-app/specs/: console-app.spec.md
phase-1-console-app/src/todo_app/: __init__.py  __main__.py  cli.py  models.py  operations.py  storage.py
phase-1-console-app/tests/: test_models.py  test_models_additional.py  test_operations.py  test_operations_additional.py  test_storage.py  test_storage_additional.py
phase-2-web-app/: BACKEND_TESTING_GUIDE.md  BACKEND_VERIFICATION_REPORT.md  COMPLETE_TESTING_GUIDE.md  CONSTITUTION_COMPLIANCE_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  ENV_SETUP_COMPLETE.md  FINAL_STEPS.md  IMPLEMENTATION_STATUS.md  PHASE_4_COMPLETE.md  QUALITY_GATES_REPORT.md  QUICK_START.md  QUICK_TEST_GUIDE.md  README.md  SESSION_SUMMARY.md  SIMPLE_SWAGGER_TESTING.md  SKILLS_USAGE_EVIDENCE.md  SPEC_TO_CODE_ANALYSIS.md  TDD_WORKFLOW_APPLICATION.md  TEST_EXECUTION_REPORT.md  UI_DESIGN_UPGRADE.md  docker-compose.yml
phase-2-web-app/backend/: .env.example  .gitignore  Dockerfile  README.md  migrate_tasks.py  mypy.ini  pyproject.toml  railway.json  reset_db.py  ruff.toml  start.sh
phase-2-web-app/backend/src/: __init__.py  config.py  database.py  main.py
phase-2-web-app/backend/src/middleware/: __init__.py  auth.py
phase-2-web-app/backend/src/models/: __init__.py  subtask.py  task.py  user.py
phase-2-web-app/backend/src/routes/: __init__.py  auth.py  subtasks.py  tasks.py
phase-2-web-app/backend/src/schemas/: __init__.py  subtask.py  task.py  user.py
phase-2-web-app/backend/src/services/: __init__.py  auth_service.py  subtask_service.py  task_service.py
phase-2-web-app/backend/src/utils/: __init__.py  security.py  validators.py
phase-2-web-app/backend/tests/: __init__.py  conftest.py  test_advanced_features.py  test_auth.py  test_tasks.py
phase-2-web-app/frontend/: .env.local.example  .gitignore  (+7 more)
phase-3-ai-chatbot/: AUTO_RESET_TASK_ID.md  CHATBOT_CRUD_OPERATIONS.md  CHATBOT_FIXES_TASK_ID.md  CHATBOT_TEST_EXAMPLES.md  FEATURE_REQUEST_CLICKABLE_UI.md  FIXES_APPLIED.md  IMPLEMENTATION_STATUS.md  REMINDER_FEATURE_COMPLETE.md  REMINDER_IMPLEMENTATION_GUIDE.md  SETUP.md  TASK_ID_DISPLAY_FEATURE.md
phase-4-kubernetes/: README.md  docker-compose.yml  plan.md  tasks.md
phase-5-cloud-deployment/: README.md
specs/: design-refresh-dribbble.md
(+225 files in other folders)
